# state-proxy

./: Cargo.toml
benches/: backend.rs  kubernetes.rs
src/: backend.rs  handover.rs  http.rs  kubernetes.rs  lib.rs  main.rs  protocol.rs  ssh.rs  state.rs  test_utils.rs  websockets.rs
src/backend/: benchmark.rs  discovery.rs  endpoint.rs  mod.rs  test.rs
src/http/: mod.rs
src/kubernetes/: benchmark.rs  mod.rs
src/matchmaking/: client.rs  mod.rs  server.rs
src/protocol/: mod.rs  proxy.rs
src/protocol/proxy/: endpoint.rs  handover.rs  mod.rs
src/ssh/: mod.rs
src/websockets/: mod.rs
tests/: kubernetes.rs  test_utils.rs
