[package]
name = "state-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Carol Schulze <carol@ereski.org>"]
description = "A load-balancing proxy that allows itself and backend services to be restarted without breaking external connections"

[features]
default = ["kubernetes", "http", "handover"]

# Enable service discovery through Kubernetes
kubernetes = ["k8s-openapi", "kube"]

# Enable support for the HTTP protocol
http = ["hyper", "hyper-tls"]

# Enable support for websockets
websockets = ["tokio-tungstenite"]

# Enable support for the SSH protocol
ssh = ["thrussh"]

# Enable the handover protocol allowing proxy instances to pass their state to
# other local instances. Useful for gracefully upgrading proxy instances
handover = ["tokio-seqpacket"]

[dependencies]
anyhow = "1.0.47"
async-trait = { version = "0.1.51", default-features = false }
clap = "2.33.3"
futures = { version = "0.3.17", default-features = false }
hyper = { version = "0.14.15", optional = true, default-features = false, features = ["server", "http1", "http2"] }
hyper-tls = { version = "0.5.0", optional = true, default-features = false }
k8s-openapi = { version = "0.13.1", optional = true, default-features = false, features = ["v1_22"] }
kube = { version = "0.64.0", optional = true, default-features = false, features = ["client", "config", "native-tls", "runtime"] }
serde = { version = "1.0.130", default-features = false }
serde_derive = { version = "1.0.130", default-features = false }
serde_json = { version = "1.0.71", default-features = false, features = ["std"] }
thiserror = { version = "1.0.30", default-features = false }
thrussh = { version = "0.33.5", optional = true }
tokio = { version = "1.14.0", default-features = false, features = ["rt-multi-thread", "net"] }
tokio-seqpacket = { version = "0.5.4", optional = true, default-features = false }
tokio-tungstenite = { version = "0.16.0", optional = true, default-features = false }
tracing = { version = "0.1.29", default-features = false }
tracing-subscriber = "0.3.2"
tuple-transpose = { version = "0.1.0", default-features = false }
