[package]
name = "state-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Carol Schulze <carol@ereski.org>"]
description = "A load-balancing proxy that allows itself and backend services to be restarted without breaking external connections"

[[bin]]
name = "state-proxy"
path = "src/bin/main.rs"

[[bench]]
name = "backend"
harness = false

[[bench]]
name = "kubernetes"
harness = false

[features]
default = ["discovery-kubernetes", "protocol-http", "handover"]

# Enable service discovery through Kubernetes
discovery-kubernetes = ["k8s-openapi", "kube"]

# Enable support for the HTTP protocol
protocol-http = ["hyper", "hyper-tls"]

# Enable support for websockets
protocol-websockets = ["tokio-tungstenite"]

# Enable support for the SSH protocol
protocol-ssh = ["thrussh"]

# Enable the handover protocol allowing proxy instances to pass their state to
# other local instances. Useful for gracefully upgrading or restarting proxy
# instances
handover = ["tokio-seqpacket"]

# Enable additional code for benchmarking through `cargo criterion`
benchmark = []

[dependencies]
anyhow = "1.0.58"
async-trait = { version = "0.1.56", default-features = false }
bincode = { version = "1.3.3", optional = true, default-features = false }
bytes = { version = "1.1.0", default-features = false }
ciborium = { version = "0.2.0", optional = true, default-features = false }
clap = { version = "3.2.6", features = ["cargo", "wrap_help"] }
futures = { version = "0.3.21", default-features = false }
http = { version = "0.2.8", default-features = false }
hyper = { version = "0.14.19", optional = true, default-features = false, features = ["server", "http1", "http2"] }
hyper-tls = { version = "0.5.0", optional = true, default-features = false }
k8s-openapi = { version = "0.15.0", optional = true, default-features = false, features = ["v1_22"] }
kube = { version = "0.73.1", optional = true, default-features = false, features = ["client", "config", "native-tls", "runtime"] }
lazy_static = { version = "1.4.0", default-features = false }
maplit = { version = "1.0.2", default-features = false }
metered = { version = "0.9.0", default-features = false }
rmp-serde = { version = "1.1.0", optional = true, default-features = false }
serde = { version = "1.0.137", default-features = false, features = ["std", "rc"] }
serde_derive = { version = "1.0.137", default-features = false }
serde_json = { version = "1.0.81", default-features = false, features = ["std"] }
strum = { version = "0.24.1", default-features = false }
strum_macros = { version = "0.24.2", default-features = false }
thiserror = { version = "1.0.31", default-features = false }
thrussh = { version = "0.33.5", optional = true }
tokio = { version = "1.19.2", default-features = false, features = ["rt-multi-thread"] }
tokio-seqpacket = { version = "0.5.5", optional = true, default-features = false }
tokio-tungstenite = { version = "0.17.1", optional = true, default-features = false }
tracing = { version = "0.1.35", default-features = false }
tracing-subscriber = { version = "0.3.11", default-features = false, features = ["fmt"] }
tuple-transpose = { version = "0.1.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.3.5", default-features = false, features = ["async_tokio"] }
futures = { version = "0.3.21", default-features = false }
pretty_assertions = { version = "1.2.1", default-features = false, features = ["std"] }
tokio = { version = "1.19.2", default-features = false, features = ["macros", "process", "time"] }

[package.metadata.docs.rs]
all-features = true
